serial shell - output only

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,9 +1,6 @@
-# Nuke built-in rules and variables.
 override MAKEFLAGS += -rR
 
-# This is the name that our final kernel executable will have.
-# Change as needed.
-override KERNEL := kernel
+override KERNEL := risk
 
 # Convenience macro to reliably declare user overridable variables.
 define DEFAULT_VAR =
@@ -15,33 +12,25 @@ define DEFAULT_VAR =
     endif
 endef
 
-# It is suggested to use a custom built cross toolchain to build a kernel.
-# We are using the standard "cc" here, it may work by using
-# the host system's toolchain, but this is not guaranteed.
-override DEFAULT_KCC := cc
+override DEFAULT_KCC := clang-18
 $(eval $(call DEFAULT_VAR,KCC,$(DEFAULT_KCC)))
 
-# Same thing for "ld" (the linker).
 override DEFAULT_KLD := ld
 $(eval $(call DEFAULT_VAR,KLD,$(DEFAULT_KLD)))
 
-# User controllable C flags.
 override DEFAULT_KCFLAGS := -g -O2 -pipe
 $(eval $(call DEFAULT_VAR,KCFLAGS,$(DEFAULT_KCFLAGS)))
 
-# User controllable C preprocessor flags. We set none by default.
 override DEFAULT_KCPPFLAGS :=
 $(eval $(call DEFAULT_VAR,KCPPFLAGS,$(DEFAULT_KCPPFLAGS)))
 
-# User controllable nasm flags.
 override DEFAULT_KNASMFLAGS := -F dwarf -g
 $(eval $(call DEFAULT_VAR,KNASMFLAGS,$(DEFAULT_KNASMFLAGS)))
 
-# User controllable linker flags. We set none by default.
 override DEFAULT_KLDFLAGS :=
 $(eval $(call DEFAULT_VAR,KLDFLAGS,$(DEFAULT_KLDFLAGS)))
 
-# Internal C flags that should not be changed by the user.
+
 override KCFLAGS += \
     -Wall \
     -Wextra \
@@ -59,14 +48,12 @@ override KCFLAGS += \
     -mno-sse2 \
     -mno-red-zone
 
-# Internal C preprocessor flags that should not be changed by the user.
 override KCPPFLAGS := \
     -I src \
     $(KCPPFLAGS) \
     -MMD \
     -MP
 
-# Internal linker flags that should not be changed by the user.
 override KLDFLAGS += \
     -m elf_x86_64 \
     -nostdlib \
@@ -75,15 +62,12 @@ override KLDFLAGS += \
     -z max-page-size=0x1000 \
     -T linker.ld
 
-# Internal nasm flags that should not be changed by the user.
 override KNASMFLAGS += \
     -Wall \
     -f elf64
 
-# Use "find" to glob all *.c, *.S, and *.asm files in the tree and obtain the
-# object and header dependency file names.
 override CFILES := $(shell cd src && find -L * -type f -name '*.c')
-override ASFILES := $(shell cd src && find -L * -type f -name '*.S')
+override ASFILES := $(shell cd src && find -L * -type f -name '*.s')
 override NASMFILES := $(shell cd src && find -L * -type f -name '*.asm')
 override OBJ := $(addprefix obj/,$(CFILES:.c=.c.o) $(ASFILES:.S=.S.o) $(NASMFILES:.asm=.asm.o))
 override HEADER_DEPS := $(addprefix obj/,$(CFILES:.c=.c.d) $(ASFILES:.S=.S.d))
@@ -92,7 +76,7 @@ override HEADER_DEPS := $(addprefix obj/,$(CFILES:.c=.c.d) $(ASFILES:.S=.S.d))
 .PHONY: all
 all: bin/$(KERNEL)
 
-src/limine.h:
+src/boot/limine.h:
 	curl -Lo $@ https://github.com/limine-bootloader/limine/raw/trunk/limine.h
 
 # Link rules for the final kernel executable.
@@ -108,26 +92,22 @@ bin/$(KERNEL): Makefile linker.ld $(OBJ)
 # Include header dependencies.
 -include $(HEADER_DEPS)
 
-# Compilation rules for *.c files.
-obj/%.c.o: src/%.c Makefile src/limine.h
+obj/%.c.o: src/%.c Makefile src/boot/limine.h
 	mkdir -p "$$(dirname $@)"
 	$(KCC) $(KCFLAGS) $(KCPPFLAGS) -c $< -o $@
 
-# Compilation rules for *.S files.
-obj/%.S.o: src/%.S Makefile
+obj/%.s.o: src/%.s Makefile
 	mkdir -p "$$(dirname $@)"
 	$(KCC) $(KCFLAGS) $(KCPPFLAGS) -c $< -o $@
 
-# Compilation rules for *.asm (nasm) files.
 obj/%.asm.o: src/%.asm Makefile
 	mkdir -p "$$(dirname $@)"
 	nasm $(KNASMFLAGS) $< -o $@
 
-# Remove object files and the final executable.
 .PHONY: clean
 clean:
 	rm -rf bin obj
 
 .PHONY: distclean
 distclean: clean
-	rm -f src/limine.h
+	rm -f src/boot/limine.h
